fix: Adjust flag list layout to prevent content overflow

--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -5,6 +5,36 @@
 @import "options";
 @import "flag";
 
+// Custom Scrollbar
+
+::-webkit-scrollbar {
+  width: 18px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
+
 /* <---------------- DAILY WORD ----------------> */
 
 h1 {
